SEO: add title and description meta tag for all pages

--- a/src/app/pages/hash-generator/hash-generator.page.html
+++ b/src/app/pages/hash-generator/hash-generator.page.html
@@ -8,7 +8,7 @@
     <mat-card-content>
       <p>
         Hash Generator is a simple tool to create cryptographic hash codes from a custom texual message input or a user
-        selected file. It supports most used comman hash algorithms, such as SHA-1, SHA-256, SHA-384, SHA-512.
+        selected file. It supports most used common hash algorithms, such as SHA-1, SHA-256, SHA-384, SHA-512.
       </p>
     </mat-card-content>
   </mat-card>
