Clean up unused css class, element references

--- a/src/app/pages/hash-generator/hash-generator.page.html
+++ b/src/app/pages/hash-generator/hash-generator.page.html
@@ -20,7 +20,7 @@
     </mat-card-header>
 
     <mat-card-content>
-      <mat-tab-group #tabGroup>
+      <mat-tab-group>
         <mat-tab label="Text">
           <mat-form-field appearance="outline">
             <mat-label>Textual Input</mat-label>
