--- a/src/app/pages/epoch-converter/epoch-converter.page.html
+++ b/src/app/pages/epoch-converter/epoch-converter.page.html
@@ -38,7 +38,7 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card class="epoch-time-card input-card">
+    <mat-card class="input-card">
       <mat-card-header>
         <mat-card-subtitle>From Epoch Timestamp</mat-card-subtitle>
       </mat-card-header>
@@ -84,7 +84,7 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card class="datetime-string-card input-card">
+    <mat-card class="input-card">
       <mat-card-header>
         <mat-card-subtitle>From Datetime String</mat-card-subtitle>
       </mat-card-header>
