Unicode Converter Page

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -18,6 +18,10 @@
           <mat-icon svgIcon="epoch-converter"></mat-icon>
           <span>Epoch Time Converter</span>
         </a>
+        <a mat-list-item routerLink="/unicode-converter">
+          <mat-icon svgIcon="unicode-converter"></mat-icon>
+          <span>Unicode Converter</span>
+        </a>
       </mat-nav-list>
       <mat-list class="theme-switcher">
         <mat-list-item>
