--- a/src/app/pages/epoch-converter/epoch-converter.page.html
+++ b/src/app/pages/epoch-converter/epoch-converter.page.html
@@ -59,24 +59,24 @@
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="time"></mat-icon>
-              <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Datetime String"
-                [value]="epochInputDate.toString()"></textarea>
+              <textarea matInput readonly tabindex="-1" type="text" matInput cdkTextareaAutosize
+                placeholder="Datetime String" [value]="epochInputDate.toString()"></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="locale-time"></mat-icon>
-              <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Locale Datetime String"
-                [value]="epochInputDate.toLocaleString()"></textarea>
+              <textarea matInput readonly tabindex="-1" type="text" matInput cdkTextareaAutosize
+                placeholder="Locale Datetime String" [value]="epochInputDate.toLocaleString()"></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="iso"></mat-icon>
-              <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="ISO 8601 Time Format"
-                [value]="epochInputDate.toISOString()"></textarea>
+              <textarea matInput readonly tabindex="-1" type="text" matInput cdkTextareaAutosize
+                placeholder="ISO 8601 Time Format" [value]="epochInputDate.toISOString()"></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
@@ -104,8 +104,8 @@
           <mat-list-item>
             <mat-form-field>
               <mat-icon matPrefix svgIcon="hourglass"></mat-icon>
-              <textarea matInput readonly type="text" matInput cdkTextareaAutosize placeholder="Unix Timestamp"
-                [value]="stringInputDate.getTime()"></textarea>
+              <textarea matInput readonly tabindex="-1" type="text" matInput cdkTextareaAutosize
+                placeholder="Unix Timestamp" [value]="stringInputDate.getTime()"></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
