--- a/src/app/pages/unicode-converter/unicode-converter.page.html
+++ b/src/app/pages/unicode-converter/unicode-converter.page.html
@@ -22,7 +22,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Textual Input</mat-label>
         <textarea matInput id="text-input" #input cdkTextareaAutosize cdkAutosizeMinRows=3 cdkAutosizeMaxRows=10
-          placeholder="Enter characters to encode" type="text" (input)='onInputMessage($event)'></textarea>
+          appAutofocus placeholder="Enter characters to encode" type="text" (input)='onInputMessage($event)'></textarea>
         <mat-hint align="end">Length: {{ charsLength }} characters</mat-hint>
       </mat-form-field>
     </mat-card-content>
