Hide stepper arrow controls on input[type=number]

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -67,3 +67,15 @@ main {
 textarea[matInput][readonly][cdkTextareaAutosize] {
   overflow: hidden;
 }
+
+// Hide native stepper arrow controls on input[type=number]
+input[type=number] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
