Upgrade to Angular 9.0.0

--- a/src/app/pages/epoch-converter/epoch-converter.page.html
+++ b/src/app/pages/epoch-converter/epoch-converter.page.html
@@ -162,7 +162,7 @@
                 matInput
                 cdkTextareaAutosize
                 placeholder="Unix Timestamp"
-                [value]="stringInputDate.getTime()"
+                [value]="stringInputDate.getTime().toString()"
               ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
