--- a/src/app/shared/components/circle-clock/circle-clock.component.html
+++ b/src/app/shared/components/circle-clock/circle-clock.component.html
@@ -1,4 +1,9 @@
-<div class="secondHand" #secondHand matTooltip="Tap to Copy" matTooltipPosition="after"></div>
+<div
+  class="secondHand"
+  #secondHand
+  matTooltip="Tap to Copy"
+  matTooltipPosition="after"
+></div>
 <p #content>
-  {{ unit == 'milliseconds' ? timestamp : round(timestamp / 1000) }}
+  {{ unit == "milliseconds" ? timestamp : round(timestamp / 1000) }}
 </p>
