--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,8 +1,13 @@
-<mat-toolbar class="mat-elevation-z6"
-             *ngIf="sidenavService.sidenav$ | async as sidenav">
-
-  <button mat-icon-button class="menu-button"
-          aria-label="menu" (click)="sidenav.toggle()">
+<mat-toolbar
+  class="mat-elevation-z6"
+  *ngIf="sidenavService.sidenav$ | async as sidenav"
+>
+  <button
+    mat-icon-button
+    class="menu-button"
+    aria-label="menu"
+    (click)="sidenav.toggle()"
+  >
     <mat-icon>menu</mat-icon>
   </button>
 
@@ -13,10 +18,12 @@
     </a>
   </div>
 
-  <a mat-icon-button class="github-button"
-     href="https://github.com/chen-yumin/coderbox"
-     aria-label="GitHub Repository">
+  <a
+    mat-icon-button
+    class="github-button"
+    href="https://github.com/chen-yumin/coderbox"
+    aria-label="GitHub Repository"
+  >
     <mat-icon svgIcon="github"></mat-icon>
   </a>
-
 </mat-toolbar>
