--- a/src/app/pages/unicode-converter/unicode-converter.page.html
+++ b/src/app/pages/unicode-converter/unicode-converter.page.html
@@ -1,14 +1,22 @@
 <main>
   <mat-card class="welcome-card">
-    <img mat-card-image src="assets/unicode-converter/welcome.svg" width="350" height="140">
+    <img
+      mat-card-image
+      src="assets/unicode-converter/welcome.svg"
+      width="350"
+      height="140"
+    />
     <mat-card-header>
       <mat-card-title>Unicode Converter</mat-card-title>
-      <mat-card-subtitle>Convert Between Characters and Unicode</mat-card-subtitle>
+      <mat-card-subtitle
+        >Convert Between Characters and Unicode</mat-card-subtitle
+      >
     </mat-card-header>
     <mat-card-content>
       <p>
-        Unicode Converter is a text processing tool to encode your text and convert it to UTF-8, UTF-16 and UTF-32 and
-        get their various representation formats.
+        Unicode Converter is a text processing tool to encode your text and
+        convert it to UTF-8, UTF-16 and UTF-32 and get their various
+        representation formats.
       </p>
     </mat-card-content>
   </mat-card>
@@ -21,8 +29,18 @@
     <mat-card-content>
       <mat-form-field appearance="outline">
         <mat-label>Textual Input</mat-label>
-        <textarea matInput id="text-input" #input cdkTextareaAutosize cdkAutosizeMinRows=3 cdkAutosizeMaxRows=10
-          appAutofocus placeholder="Enter characters to encode" type="text" (input)='onInputMessage($event)'></textarea>
+        <textarea
+          matInput
+          id="text-input"
+          #input
+          cdkTextareaAutosize
+          cdkAutosizeMinRows="3"
+          cdkAutosizeMaxRows="10"
+          appAutofocus
+          placeholder="Enter characters to encode"
+          type="text"
+          (input)="onInputMessage($event)"
+        ></textarea>
         <mat-hint align="end">Length: {{ charsLength }} characters</mat-hint>
       </mat-form-field>
     </mat-card-content>
@@ -38,22 +56,43 @@
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Hexadecimal Byte Codes" [value]="utf32hex"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Hexadecimal Byte Codes"
+                [value]="utf32hex"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="\u Notation" [value]="utf32hexU"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="\u Notation"
+                [value]="utf32hexU"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Decimal 32-bit Array" [value]="utf32dec"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Decimal 32-bit Array"
+                [value]="utf32dec"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
@@ -70,22 +109,43 @@
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Hexadecimal Byte Codes" [value]="utf16hex"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Hexadecimal Byte Codes"
+                [value]="utf16hex"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="\u Notation" [value]="utf16hexU"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="\u Notation"
+                [value]="utf16hexU"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Decimal 16-bit Array" [value]="utf16dec"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Decimal 16-bit Array"
+                [value]="utf16dec"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
@@ -102,22 +162,43 @@
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Hexadecimal Byte Codes" [value]="utf8hex"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Hexadecimal Byte Codes"
+                [value]="utf8hex"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="\x Notation" [value]="utf8hexX"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="\x Notation"
+                [value]="utf8hexX"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="Decimal 8-bit Array" [value]="utf8dec"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="Decimal 8-bit Array"
+                [value]="utf8dec"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
@@ -134,15 +215,29 @@
         <mat-list>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="URI Encode with ASCII" [value]="uri"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="URI Encode with ASCII"
+                [value]="uri"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
           <mat-list-item>
             <mat-form-field>
-              <textarea matInput readonly tabindex="-1" #autosize="cdkTextareaAutosize" cdkTextareaAutosize
-                placeholder="URI Encode Full" [value]="uriFull"></textarea>
+              <textarea
+                matInput
+                readonly
+                tabindex="-1"
+                #autosize="cdkTextareaAutosize"
+                cdkTextareaAutosize
+                placeholder="URI Encode Full"
+                [value]="uriFull"
+              ></textarea>
               <app-input-copy-button matSuffix></app-input-copy-button>
             </mat-form-field>
           </mat-list-item>
