--- a/src/app/shared/components/circle-clock/circle-clock.component.scss
+++ b/src/app/shared/components/circle-clock/circle-clock.component.scss
@@ -33,7 +33,7 @@
   transition: opacity 0.3s;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 6px;
     left: calc(50% - 2px);
