--- a/src/app/shared/components/file-drop-area/file-drop-area.component.html
+++ b/src/app/shared/components/file-drop-area/file-drop-area.component.html
@@ -1,4 +1,9 @@
 <div matRipple class="upload-file-container" (click)="fileInput.click()">
-  <input hidden type="file" #fileInput (change)="onFile.emit($event.target.files)">
+  <input
+    hidden
+    type="file"
+    #fileInput
+    (change)="onFile.emit($event.target.files)"
+  />
   <ng-content></ng-content>
 </div>
