--- a/src/app/shared/components/input-copy-button/input-copy-button.component.html
+++ b/src/app/shared/components/input-copy-button/input-copy-button.component.html
@@ -1,3 +1,8 @@
-<button mat-icon-button aria-label="Copy" matTooltip="Copy" (click)="copyToClipboard()">
+<button
+  mat-icon-button
+  aria-label="Copy"
+  matTooltip="Copy"
+  (click)="copyToClipboard()"
+>
   <mat-icon svgIcon="copy"></mat-icon>
 </button>
